Alterei localização da imagem para facilitar localização e também editei página de eventos para melhor visualização dos dados.

--- a/django/app/templates/partials/organizador.html
+++ b/django/app/templates/partials/organizador.html
@@ -2,6 +2,7 @@
 {% if categorias %}
 {% for categoria in categorias %}
     <div><h3><br>{{categoria.nome_categoria}}</h3>
+    {% if calendarios %}
     {% for calendario in calendarios %}
         {% if calendario.categoria_evento == categoria.id %}
         <div>
@@ -14,5 +15,6 @@
         {% endif %}
     {% endfor %}
     </div>
+    {% endif %}
 {% endfor %}
 {% endif %}
