add: nome_do_sistema para comprovante_de_matricula

--- a/sistema-de-controle-de-informacoes-ifrs/templates/partials/comprovante_de_matricula.html
+++ b/sistema-de-controle-de-informacoes-ifrs/templates/partials/comprovante_de_matricula.html
@@ -1,5 +1,7 @@
 <label for="nome_evento"><b>Nome do Evento</b></label>
 <input type="text" class="form-control" name="nome_evento" placeholder="Ex.:Nome do Evento" required>
+<label for="nome_do_sistema"><b>Sistema</b></label>
+<input type="text" class="form-control" name="nome_do_sistema" placeholder="Ex.:SIA" required>
 <label for="link_1"><b>Link 1 </b></label>
 <input type="text" class="form-control" name="link_1" placeholder="Link 1" required>
 <label for="link_2"><b>Link 2 </b></label>
