--- a/sistema-de-controle-de-informacoes-ifrs/templates/partials/comprovante_de_matricula.html
+++ b/sistema-de-controle-de-informacoes-ifrs/templates/partials/comprovante_de_matricula.html
@@ -1,10 +1,6 @@
-<label for="nome_evento"><b>Nome do Evento</b></label>
-<input type="text" class="form-control" name="nome_evento" placeholder="Ex.:Nome do Evento" required>
 <label for="nome_do_sistema"><b>Sistema</b></label>
-<input type="text" class="form-control" name="nome_do_sistema" placeholder="Ex.:SIA" required>
-<label for="link_1"><b>Link 1 </b></label>
-<input type="text" class="form-control" name="link_1" placeholder="Link 1" required>
-<label for="link_2"><b>Link 2 </b></label>
-<input type="text" class="form-control" name="link_2" placeholder="Link 2">
-<label for="link_3"><b>Link 3 </b></label>
-<input type="text" class="form-control" name="link_3" placeholder="Link 3">
+<input type="text" class="form-control" name="nome_do_sistema" placeholder="Ex.:SIA" required><br>
+<label for="link_1"><b>Link de acesso ao Sistema </b></label>
+<input type="text" class="form-control" name="link_1" placeholder="Ex.: https://sia.ifrs.edu.br/aplicacoes/login/index.php" required><br>
+<label for="descricao"><b>Descrição</b></label>
+<textarea  cols="80" rows="6" id="descricao" name="descricao" class="form-control" placeholder="Aqui você pode passar uma breve descrição de como baixar o comprovante de matrícula." required></textarea><br>
