--- a/sistema-de-controle-de-informacoes-ifrs/templates/partials/formulario.html
+++ b/sistema-de-controle-de-informacoes-ifrs/templates/partials/formulario.html
@@ -1,13 +1,13 @@
+<br><br>
+<h1> FORMULARIO </h1><br><br>
 
-    <br><br><h1> FORMULARIO </h1><br><br>
-
-    <form action="{% url 'formulario' %}" method="POST">    
+<form action="{% url 'formulario' %}" method="POST">
     {% csrf_token %}
     <div class="col-12 col-lg-12">
         <label for="categoria"><b>Categoria</b></label>
-        <input type="text" class="form-control" name="categoria" value="{{categoria.nome_categoria}}" readonly>
+        <input type="text" class="form-control" name="categoria" value="{{categoria.nome_categoria}}" readonly><br>
         <label for="usuario"><b>Usuário</b></label>
-        <input type="text" class="form-control" name="usuario" value="{{user.username}}" readonly>
+        <input type="text" class="form-control" name="usuario" value="{{user.username}}" readonly><br>
         {% if categoria.nome_categoria == "Comprovante de matrícula"%}
         {% include 'partials/comprovante_de_matricula.html' %}
         {% endif %}
@@ -35,14 +35,15 @@
         {% if categoria.nome_categoria == "Tutoriais de acessos a sistemas acadêmicos"%}
         {% include 'partials/tutoriais_de_acessos_a_sistemas_academicos.html' %}
         {% endif %}
-        <input type="checkbox" id="visivel" name="visivel" value="True" checked >
+        <input type="checkbox" id="visivel" name="visivel" value="True" checked>
         <label for="visivel">Visível</label>
     </div>
     <div class="col-12 text-center">
         <button class="btn btn-success" type="submit">Cadastre este evento</button>
     </div>
-    </form>
-    <br>
-    <div id="current_date"></p>
+</form>
+<br>
+<div id="current_date">
+    </p>
     <script> document.getElementById("current_date").innerHTML = Date();</script>
-    </div>
+</div>
