--- a/sistema-de-controle-de-informacoes-ifrs/templates/partials/informacoes_sobre_inscricao_ou_matricula.html
+++ b/sistema-de-controle-de-informacoes-ifrs/templates/partials/informacoes_sobre_inscricao_ou_matricula.html
@@ -1,3 +1,11 @@
+<label for="modalidade_de_ingresso"><b> Modalidade de Ingresso </b></label>
+<select name="modalidade_de_ingresso" class="form-control" id="modalidade_de_ingresso" required>
+    <option value="ENEM">ENEM</option>
+    <option value="Prova">Prova</option>
+    <option value="Pessoa Indígena">Pessoa Indígena</option>
+    <option value="Processo Seletivo EJA">Processo Seletivo EJA</option>
+    <option value="Sorteio">Sorteio</option>
+</select>
 <label for="nome_evento"><b> Nome do Evento</b></label>
 <input type="text" class="form-control" name="nome_evento" placeholder="Ex.:Nome do Evento" required>
 <label for="descricao"><b>Descrição:</b></label><br>
