--- a/sistema-de-controle-de-informacoes-ifrs/templates/partials/requerimentos_ou_formularios.html
+++ b/sistema-de-controle-de-informacoes-ifrs/templates/partials/requerimentos_ou_formularios.html
@@ -15,6 +15,6 @@
 <label for="arquivo_2"><b> Arquivo 2 </b>opcional</label>
 <input type="file" class="form-control" name="arquivo_2">
 <label for="foto_1"><b> Foto 1  </b>opcional</label>
-<input type="image" class="form-control" name="foto_1">
+<input type="file" class="form-control" name="foto_1">
 <label for="foto_2"><b> Foto 2 </b>opcional</label>
-<input type="image" class="form-control" name="foto_2">
+<input type="file" class="form-control" name="foto_2">
