--- a/sistema-de-controle-de-informacoes-ifrs/templates/usuarios/dashboard.html
+++ b/sistema-de-controle-de-informacoes-ifrs/templates/usuarios/dashboard.html
@@ -8,6 +8,8 @@
             <tr>
                 <td></td>
                 <td>
+                    
+                {% include 'partials/_alertas.html' %}
                     <div class="contact-area section-padding-0-80">
                         <div class="container">
                             <div class="row">
