--- a/sistema-de-controle-de-informacoes-ifrs/templates/usuarios/login.html
+++ b/sistema-de-controle-de-informacoes-ifrs/templates/usuarios/login.html
@@ -17,6 +17,7 @@
                 </div>
             </div>
         </div>
+        {% include 'partials/_alertas.html' %}
         <div class="row">
             <div class="col-12">
                 <div class="contact-form-area">
