--- a/sistema-de-controle-de-informacoes-ifrs/templates/partials/requerimentos_ou_formularios.html
+++ b/sistema-de-controle-de-informacoes-ifrs/templates/partials/requerimentos_ou_formularios.html
@@ -1,20 +1,22 @@
-<label for="nome_do_requerimento"><b>Nome do Requerimento </b></label>
-<input type="text" class="form-control" name="nome_do_requerimento" placeholder="Ex.: Solicitação de Comprovante de Matrícula" required>
+<label for="nome_do_requerimento"><b>Requerimento</b></label>
+<select name="nome_do_requerimento" class="form-control" id="nome_do_requerimento" required>
+    <option value="Aproveitamento De Estudos">Aproveitamento De Estudos</option>
+    <option value="Atividades Complementares">Atividades Complementares</option>
+    <option value="Cancelamento De Matrícula">Cancelamento De Matrícula</option>
+    <option value="Certificação De Conhecimentos">Certificação De Conhecimentos</option>
+    <option value="Justificativa De Falta">Justificativa De Faltas/Segunda Chamadas</option>
+    <option value="Quebra De Pré-Requisitos">Quebra De Pré-Requisitos</option>
+    <option value="Reingresso">Reingresso</option>
+    <option value="Trancamento De Disciplina">Trancamento De Disciplina</option>
+    <option value="Trancamento De Matrícula">Trancamento De Matrícula</option>
+</select>
 <label for="descricao"><b>Descrição:</b></label><br>
 <textarea  cols="80" rows="8" id="descricao" name="descricao" class="form-control" placeholder="Ex.: Aqui você deve inserir uma breve descrição deste requerimento." required></textarea><br>
 <label for="data_de_inicio"><b>Data de Início </b></label>
 <input type="date" class="form-control" name="data_de_inicio" placeholder="Ex.: 21/01/2023" required>
 <label for="data_de_fim"><b>Data do Fim </b></label>
 <input type="date" class="form-control" name="data_de_fim" placeholder="Ex.: 29/01/2023" required>
-<label for="link_1"><b> Link 1 </b></label>
+<label for="link_1"><b> Link de acesso ao Requerimento </b></label>
 <input type="text" class="form-control" name="link_1" placeholder=" adicione um link aqui " required>
-<label for="link_2"><b> Link 2 </b></label>
+<label for="link_2"><b> Link tutorial de uso </b>(opcional)</label>
 <input type="text" class="form-control" name="link_2" placeholder=" adicione um link aqui (opcional) ">
-<label for="arquivo_1"><b> Arquivo 1  </b>opcional</label>
-<input type="file" class="form-control" name="arquivo_1">
-<label for="arquivo_2"><b> Arquivo 2 </b>opcional</label>
-<input type="file" class="form-control" name="arquivo_2">
-<label for="foto_1"><b> Foto 1  </b>opcional</label>
-<input type="file" class="form-control" name="foto_1">
-<label for="foto_2"><b> Foto 2 </b>opcional</label>
-<input type="file" class="form-control" name="foto_2">
