acrescentei campos para pesquisa

--- a/sistema-de-controle-de-informacoes-ifrs/templates/buscar.html
+++ b/sistema-de-controle-de-informacoes-ifrs/templates/buscar.html
@@ -1,11 +1,9 @@
 {% load static %}
 {% include 'partials/header.html' %}
 <body>
+    {% include 'partials/login-admin.html' %}
     <table>
-        <tr>
-            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            <td><a href="/admin"><h5>ENTRAR COMO ADMINISTRADOR</h5></a><br><br></td>
-        </tr>
+        <tr><td>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</td><td></td></tr>
         <tr>
             <td></td>
             <td><center><h1>PESQUISA</h1></center><br><br></td>
