--- a/sistema-de-controle-de-informacoes-ifrs/templates/partials/organizador.html
+++ b/sistema-de-controle-de-informacoes-ifrs/templates/partials/organizador.html
@@ -18,10 +18,189 @@
                 </a>
             </div>
         </div>
+        <br>
         {% endif %}
     {% endfor %}
-    <br><br>
-    </div>
+    {% endif %}
+    {% if eventos1 %}
+    {% for evento in eventos1 %}
+        {% if evento.categoria.id == categoria.id %}
+        <div>
+            <div>
+                <a href="{% url 'evento' evento.id %}">
+                <h6>{{evento.nome_evento}}</h6>
+                <h6>{{evento.nome_do_professor}}</h6>
+                <h6>{{evento.nome_do_curso}}</h6>
+                <h6>{{evento.nome_do_requerimento}}</h6>
+                <h6>{{evento.nome_do_sistema}}</h6>
+                </a>
+            </div>
+        </div>
+        <br>
+        {% endif %}
+    {% endfor %}
+    {% endif %}
+    {% if eventos2 %}
+    {% for evento in eventos2 %}
+        {% if evento.categoria.id == categoria.id %}
+        <div>
+            <div>
+                <a href="{% url 'evento' evento.id %}">
+                <h6>{{evento.nome_evento}}</h6>
+                <h6>{{evento.nome_do_professor}}</h6>
+                <h6>{{evento.nome_do_curso}}</h6>
+                <h6>{{evento.nome_do_requerimento}}</h6>
+                <h6>{{evento.nome_do_sistema}}</h6>
+                </a>
+            </div>
+        </div>
+        <br>
+        {% endif %}
+    {% endfor %}
+    {% endif %}
+    {% if eventos3 %}
+    {% for evento in eventos3 %}
+        {% if evento.categoria.id == categoria.id %}
+        <div>
+            <div>
+                <a href="{% url 'evento' evento.id %}">
+                <h6>{{evento.nome_evento}}</h6>
+                <h6>{{evento.nome_do_professor}}</h6>
+                <h6>{{evento.nome_do_curso}}</h6>
+                <h6>{{evento.nome_do_requerimento}}</h6>
+                <h6>{{evento.nome_do_sistema}}</h6>
+                </a>
+            </div>
+        </div>
+        <br>
+        {% endif %}
+    {% endfor %}
+    {% endif %}
+    {% if eventos4 %}
+    {% for evento in eventos4 %}
+        {% if evento.categoria.id == categoria.id %}
+        <div>
+            <div>
+                <a href="{% url 'evento' evento.id %}">
+                <h6>{{evento.nome_evento}}</h6>
+                <h6>{{evento.nome_do_professor}}</h6>
+                <h6>{{evento.nome_do_curso}}</h6>
+                <h6>{{evento.nome_do_requerimento}}</h6>
+                <h6>{{evento.nome_do_sistema}}</h6>
+                </a>
+            </div>
+        </div>
+        <br>
+        {% endif %}
+    {% endfor %}
+    {% endif %}
+    {% if eventos5 %}
+    {% for evento in eventos5 %}
+        {% if evento.categoria.id == categoria.id %}
+        <div>
+            <div>
+                <a href="{% url 'evento' evento.id %}">
+                <h6>{{evento.nome_evento}}</h6>
+                <h6>{{evento.nome_do_professor}}</h6>
+                <h6>{{evento.nome_do_curso}}</h6>
+                <h6>{{evento.nome_do_requerimento}}</h6>
+                <h6>{{evento.nome_do_sistema}}</h6>
+                </a>
+            </div>
+        </div>
+        <br>
+        {% endif %}
+    {% endfor %}
+    {% endif %}
+    {% if eventos6 %}
+    {% for evento in eventos6 %}
+        {% if evento.categoria.id == categoria.id %}
+        <div>
+            <div>
+                <a href="{% url 'evento' evento.id %}">
+                <h6>{{evento.nome_evento}}</h6>
+                <h6>{{evento.nome_do_professor}}</h6>
+                <h6>{{evento.nome_do_curso}}</h6>
+                <h6>{{evento.nome_do_requerimento}}</h6>
+                <h6>{{evento.nome_do_sistema}}</h6>
+                </a>
+            </div>
+        </div>
+        <br>
+        {% endif %}
+    {% endfor %}
+    {% endif %}
+    {% if eventos7 %}
+    {% for evento in eventos7 %}
+        {% if evento.categoria.id == categoria.id %}
+        <div>
+            <div>
+                <a href="{% url 'evento' evento.id %}">
+                <h6>{{evento.nome_evento}}</h6>
+                <h6>{{evento.nome_do_professor}}</h6>
+                <h6>{{evento.nome_do_curso}}</h6>
+                <h6>{{evento.nome_do_requerimento}}</h6>
+                <h6>{{evento.nome_do_sistema}}</h6>
+                </a>
+            </div>
+        </div>
+        <br>
+        {% endif %}
+    {% endfor %}
+    {% endif %}
+    {% if eventos8 %}
+    {% for evento in eventos8 %}
+        {% if evento.categoria.id == categoria.id %}
+        <div>
+            <div>
+                <a href="{% url 'evento' evento.id %}">
+                <h6>{{evento.nome_evento}}</h6>
+                <h6>{{evento.nome_do_professor}}</h6>
+                <h6>{{evento.nome_do_curso}}</h6>
+                <h6>{{evento.nome_do_requerimento}}</h6>
+                <h6>{{evento.nome_do_sistema}}</h6>
+                </a>
+            </div>
+        </div>
+        <br>
+        {% endif %}
+    {% endfor %}
+    {% endif %}
+    {% if eventos9 %}
+    {% for evento in eventos9 %}
+        {% if evento.categoria.id == categoria.id %}
+        <div>
+            <div>
+                <a href="{% url 'evento' evento.id %}">
+                <h6>{{evento.nome_evento}}</h6>
+                <h6>{{evento.nome_do_professor}}</h6>
+                <h6>{{evento.nome_do_curso}}</h6>
+                <h6>{{evento.nome_do_requerimento}}</h6>
+                <h6>{{evento.nome_do_sistema}}</h6>
+                </a>
+            </div>
+        </div>
+        <br>
+        {% endif %}
+    {% endfor %}
+    {% endif %}
+    {% if eventos10 %}
+    {% for evento in eventos10 %}
+        {% if evento.categoria.id == categoria.id %}
+        <div>
+            <div>
+                <a href="{% url 'evento' evento.id %}">
+                <h6>{{evento.nome_evento}}</h6>
+                <h6>{{evento.nome_do_professor}}</h6>
+                <h6>{{evento.nome_do_curso}}</h6>
+                <h6>{{evento.nome_do_requerimento}}</h6>
+                <h6>{{evento.nome_do_sistema}}</h6>
+                </a>
+            </div>
+        </div>
+        <br>
+        {% endif %}
+    {% endfor %}
     {% endif %}
 {% endfor %}
 {% endif %}
